--- a/SignalRApp/SignalRApp.csproj
+++ b/SignalRApp/SignalRApp.csproj
@@ -7,11 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.2" />
-    <PackageReference Include="NStandard" Version="0.3.4" />
+    <PackageReference Include="NStandard" Version="0.3.8.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Appie\Appie.csproj" />
+    <ProjectReference Include="..\SignalRSharp\SignalRSharp.csproj" />
   </ItemGroup>
 
 </Project>
