--- a/SignalRSharp/SignalRSharp.csproj
+++ b/SignalRSharp/SignalRSharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,7 +8,7 @@
     <RepositoryUrl>https://github.com/zmjack/SignalRSharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>signalr client</PackageTags>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
